[package]
name = "radio_chat"
version = "0.1.0"
authors = ["VM IUT <vm@iut>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libzmq = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0"